# bitaxe-ultra-firmware

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
.github/workflows/: build-espidf.yml
docs/: ARCHITECTURE.md  COMPATIBILITY.md  HARDWARE.md  TESTING.md
main/: CMakeLists.txt  global_state.c  global_state.h  http_server.c  http_server.h  i2c.c  i2c.h  main.c  mining.c  mining.h  thermal.c  thermal.h  vcore.c  vcore.h  wifi.c  wifi.h
scripts/: flash.sh  package_release.sh
